# nodetracer

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  release-on-push.yml  release.yml
docs/: integration-guide.md
examples/: 01_sequential_tool_calling.py  02_parallel_execution.py  03_retry_and_fallback.py  04_multi_agent_handoff.py  basic_usage.py
src/logtracer/: __init__.py  cli.py  exceptions.py
src/logtracer/cli/: inspect_cmd.py
src/logtracer/core/: __init__.py  span.py  tracer.py
src/logtracer/models/: trace_graph.py
src/logtracer/serializers/: json.py
src/nodetracer/: __init__.py  auto.py  exceptions.py
src/nodetracer/cli/: __init__.py  inspect_cmd.py  main.py  view_cmd.py
src/nodetracer/config/: __init__.py
src/nodetracer/core/: context.py  decorators.py  hooks.py  span.py  tracer.py  tracer_config.py
src/nodetracer/instrumentation/: __init__.py  threads.py
src/nodetracer/models/: __init__.py  edge.py  node.py  trace_graph.py
src/nodetracer/renderers/: __init__.py  console.py
src/nodetracer/serializers/: __init__.py  json.py
src/nodetracer/storage/: __init__.py  base.py  file.py  memory.py
tests/: conftest.py  test_auto_instrument.py  test_cli.py  test_console.py  test_context.py  test_decorators.py  test_edge_cases.py  test_graph.py  test_serializers.py  test_storage.py  test_thread_instrumentation.py  test_tracer.py
viewer/: index.html  package-lock.json  package.json  vite.config.ts
viewer/src/: App.css  App.tsx
viewer/src/components/: NodeBadge.tsx  NodeDetail.tsx  TraceGraph.tsx  TraceList.tsx  TraceTimeline.tsx  TraceTree.tsx  ViewToggle.tsx
viewer/src/components/graph/: GraphEdge.tsx  GraphNode.tsx
viewer/src/hooks/: useTraces.ts
viewer/src/types/: trace.ts
