[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "nodetracer"
version = "0.3.1"
description = "Framework-agnostic tracing library for AI agents. Record, inspect, and debug agent execution as a structured graph."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Kalle Mickelborg" }
]
keywords = ["ai", "agents", "tracing", "observability", "debugging", "llm", "graph"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.11.0",
  "rich>=13.9.0",
]

[project.urls]
Homepage = "https://github.com/kallemickelborg/nodetracer"
Repository = "https://github.com/kallemickelborg/nodetracer"
Issues = "https://github.com/kallemickelborg/nodetracer/issues"

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
  "ty>=0.0.17",
]
http = [
  "requests>=2.25",
  "httpx>=0.24",
  "aiohttp>=3.8",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "ruff>=0.9.0",
  "ty>=0.0.17",
]

[project.scripts]
nodetracer = "nodetracer.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/nodetracer"]

[tool.hatch.build.targets.sdist]
exclude = ["stateful-ai-agent"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "RUF"]

[tool.ty.src]
include = ["src", "tests", "examples"]

[tool.uv]
default-groups = ["dev"]
